<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    
	<groupId>sk.thenoen.rasptemp</groupId>
	<artifactId>RaspTemp-Server</artifactId>
	<version>0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>RaspTemp-Server</name>
	<description>Raspberry temperature monitoring</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.0.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<frontend.skip>false</frontend.skip>
		<deltaspike.version>1.5.1</deltaspike.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven-compiler-plugin-version>3.8.0</maven-compiler-plugin-version>
		<frontend-maven-plugin.version>1.0</frontend-maven-plugin.version>
		<frontend-maven-plugin.nodeVersion>v6.2.0</frontend-maven-plugin.nodeVersion>
		<frontend-maven-plugin.npmVersion>3.9.2</frontend-maven-plugin.npmVersion>
		<maven.version>3.2.3</maven.version>
		<maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
		<spring-cloud-starter-parent.version>Brixton.RELEASE</spring-cloud-starter-parent.version>
		<platform-bom.version>2.0.5.RELEASE</platform-bom.version>
		<jackson.version>2.9.7</jackson.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-test-autoconfigure</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.9.7</version>
		</dependency>


	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<filesets> <!-- this is out app -->
						<fileset>
							<directory>src/main/frontend/js/app/build</directory>
						</fileset>
						<fileset> <!-- this is where we copy our resources (deps + app) -->
							<directory>src/main/webapp/js</directory>
						</fileset>
						<!-- not deleted for time it can take
						<fileset>
						  <directory>src/main/frontend/node_modules</directory>
						</fileset>
						-->

					</filesets>
				</configuration>
			</plugin>

			<!--<plugin>-->
				<!--<artifactId>maven-surefire-plugin</artifactId>-->
				<!--<configuration>-->
					<!--<argLine>-Xmx512m -XX:MaxPermSize=256</argLine>-->
				<!--</configuration>-->
			<!--</plugin>-->

			<!--<plugin>-->
				<!--<groupId>org.apache.maven.plugins</groupId>-->
				<!--<artifactId>maven-compiler-plugin</artifactId>-->
				<!--<version>3.8.0</version>-->
				<!--<configuration>-->
					<!--<release>11</release>-->
				<!--</configuration>-->
			<!--</plugin>-->


			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
